--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>Micky Loo</h1>
